favorite tab message login button display fix on mobile

--- a/src/app/components/events-list/events-list.component.scss
+++ b/src/app/components/events-list/events-list.component.scss
@@ -477,6 +477,9 @@ ul.nav {
   .display-6 {
     font-size: x-large !important;
   }
+  .empty-favorites-message {
+    height: 90% !important;
+  }
 }
 
 
